[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/Resized_Images/Erlenmeyerflask_container.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Objects/LabContainer.gd" type="Script" id=2]
[ext_resource path="res://Scripts/DimensionSprite.gd" type="Script" id=4]
[ext_resource path="res://Images/FillSprites/Erlenmeyerflask_liquid.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 32 )

[node name="LabContainer" type="RigidBody2D" groups=["Container", "LabObjects", "Weighable"]]
z_index = 1
collision_layer = 2
input_pickable = true
gravity_scale = 0.0
can_sleep = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.38419e-07, -7.45058e-09 )
z_index = 1
texture = ExtResource( 1 )

[node name="FillSprite" type="Sprite" parent="."]
position = Vector2( 0, 24 )
texture = ExtResource( 5 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 1 )

[node name="FollowMenu" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Button" type="Button" parent="FollowMenu"]
margin_left = -21.0
margin_top = 35.0
margin_right = 22.0
margin_bottom = 55.0
text = " Mix "

[connection signal="pressed" from="FollowMenu/Button" to="." method="_on_Button_pressed"]
